--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Scripts and patches to build ROMs for Samsung Galaxy S2 Plus
+Scripts and patches to build ROMs for Samsung Galaxy Trend Plus, S Duos 2
 ==================================
 
 How to get:
